--- a/package.json
+++ b/package.json
@@ -37,5 +37,13 @@
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@vidstack/react": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
