--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-player": "^3.4.0",
+    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "vidstack": "1.12.12"
   },
